--- a/AplikasiPergudangan/nbproject/private/private.properties
+++ b/AplikasiPergudangan/nbproject/private/private.properties
@@ -1,2 +1,2 @@
 compile.on.save=true
-user.properties.file=C:\\Users\\Fender\\AppData\\Roaming\\NetBeans\\15\\build.properties
+user.properties.file=C:\\Users\\DEWATA\\AppData\\Roaming\\NetBeans\\15\\build.properties
