edit frame Dasboard

--- a/AplikasiPergudangan/nbproject/project.properties
+++ b/AplikasiPergudangan/nbproject/project.properties
@@ -35,7 +35,8 @@ dist.jlink.output=${dist.jlink.dir}/aplikasiPergudangan
 excludes=
 includes=**
 jar.compress=false
-javac.classpath=
+javac.classpath=\
+    ${reference.ui-dashboard-001.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
@@ -76,6 +77,8 @@ manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
 platform.active=default_platform
+project.ui-dashboard-001=../../DJRaven/part 3/ui-dashboard-001
+reference.ui-dashboard-001.jar=${project.ui-dashboard-001}/dist/ui-dashboard-001.jar
 run.classpath=\
     ${javac.classpath}:\
     ${build.classes.dir}
