--- a/AplikasiPergudangan/nbproject/private/private.properties
+++ b/AplikasiPergudangan/nbproject/private/private.properties
@@ -1,3 +1,3 @@
 compile.on.save=true
 project.ui-dashboard-001=C:\\Users\\DEWATA\\Documents\\NetBeansProjects\\gitHub\\DJRaven\\dasboard\\part 3\\ui-dashboard-001
-user.properties.file=C:\\Users\\Fender\\AppData\\Roaming\\NetBeans\\15\\build.properties
+user.properties.file=C:\\Users\\DEWATA\\AppData\\Roaming\\NetBeans\\15\\build.properties
